Organizando e dividindo o projeto Dominio/Infra

--- a/src/TarefasSite/TarefasSite.csproj
+++ b/src/TarefasSite/TarefasSite.csproj
@@ -14,4 +14,9 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tarefas.Dominio\Tarefas.Dominio.csproj" />
+    <ProjectReference Include="..\Tarefas.Infra\Tarefas.Infra.csproj" />
+  </ItemGroup>
+
 </Project>
