--- a/src/TarefasSite/appsettings.json
+++ b/src/TarefasSite/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "TarefasDB": "Server=(localdb)\\MSSQLLocalDB;Database=DB_TAREFAS;Trusted_Connection=True;"
+    "TarefasDB": "Integrated Security=SSPI;Persist Security Info=False;Initial Catalog=TarefaDB;Data Source=DESKTOP-HABILF2\\SQLEXPRESS"
   }
 }
